--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,7 @@
                                 stroke="#57AD56"
                                 stroke-width="0.25" />
                         </svg>
+                        <button>restaurant</button>
                     </div>
 
                     <div class="header--address">
@@ -69,12 +70,11 @@
                         <p>to</p>
                         <input type="text" name="" id="" placeholder="******" />
                     </div>
-
+                    <button>restaurant</button>
                     <div class="header--buttons">
                         <div>
                             <a href="">Sign In</a>
                             <a href="">Register</a>
-                            
                         </div>
                         <div class="header--cart">
                             <svg
